# kpdf

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: release-packager.yml
assets/: app.icns
assets/i18n/: en_US.json  zh_CN.json
scripts/: bump.sh  fetch_pdfium_lib.bat  fetch_pdfium_lib.sh  generate_icon.sh  sign_app_before_dmg.sh
scripts/icon_generator/: Cargo.toml
scripts/icon_generator/src/: main.rs
src/: command_panel.rs  display_list.rs  i18n.rs  icons.rs  logger.rs  macos_context_menu.rs  main.rs  menu_bar.rs  pdf.rs  pdf_viewer.rs  tab.rs  text_selection.rs  thumbnail_list.rs  updater.rs  utils.rs
src/pdf/: utils.rs
src/pdf_viewer/: about_dialog.rs  command_panel.rs  constants.rs  core.rs  dialog_utils.rs  display_list.rs  file_actions.rs  interactions.rs  keymap.rs  markdown_note_dialog.rs  markdown_note_window.rs  menu_bar.rs  mod.rs  page_rendering.rs  recent_bookmark_notes.rs  settings_dialogs.rs  tab.rs  tab_actions.rs  text_selection.rs  thumbnail_list.rs  types.rs  utils.rs  window_utils.rs
