[package]
name = "kpdf"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
pdfium-render = { version = "0.8.37", features = ["sync"] }
image = "0.25.9"
sled = "0.34.7"
rust-embed = "8.11.0"
tklog = "0.3.0"

[build-dependencies]
winresource = "0.1.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[package.metadata.packager]
product-name = "kPDF"
identifier = "com.kuss.kpdf"
before-packaging-command = "cargo build --release"
resources = ["lib"]
icons = ["assets/app.icns", "assets/app.ico"]

[package.metadata.packager.nsis]
installer-icon = "assets/app.ico"
