[package]
name = "kpdf"
version = "0.8.0"
edition = "2024"

[package.metadata.packager]
product-name = "kPDF"
identifier = "com.kuss.kpdf"
before-packaging-command = "cargo build --release"
resources = [
    "lib",
    "assets/themes",
    "assets/i18n",
]
icons = [
    "assets/app.png",
    "assets/app.icns",
    "assets/app.ico",
]

[package.metadata.packager.nsis]
installer-icon = "assets/app.ico"

[dependencies]
anyhow = "1.0.101"
gpui = "0.2.2"
gpui-component = "0.5.1"
image = "0.25.9"
semver = "1.0.26"
serde_json = "1.0.145"
sled = "0.34.7"
rust-embed = "8.11.0"
tklog = "0.3.0"
sys-locale = "0.3.2"

[dependencies.pdfium-render]
version = "0.8.37"
features = ["sync"]

[dependencies.reqwest]
version = "0.12.28"
default-features = false
features = [
    "blocking",
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[build-dependencies]
winresource = "0.1.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "linux")'.dependencies]
raw-window-handle = "0.6"
x11rb = "0.13.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
